<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".ui.ModifyPassActivity">


    <include layout="@layout/base_toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/modify_pass"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <EditText
            android:id="@+id/modify_pass_et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/modify_pass_et_re_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/input_re_pass"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/modify_pass_bt_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:text="@string/apply" />


</LinearLayout>