<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="false"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:src="@drawable/logo"
        android:id="@+id/iv_main_pic"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/login"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/account"
            android:textColor="#000"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/et_login_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="@string/input_tel"
            android:inputType="number"
            android:textColor="#758a99" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/password"
            android:textColor="#000"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="@string/input_pass"
            android:inputType="textPassword"
            android:textColor="#758a99" />


    </LinearLayout>

    <Button
        android:id="@+id/bt_login_toLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#3C8DC4"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_login_forget_ass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/retrieve"
            android:textColor="#177cb0"
            android:textSize="18sp" />

        <TextView
            android:gravity="end"
            android:layout_weight="1"
            android:id="@+id/tv_login_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#177cb0"
            android:textSize="18sp" />


    </LinearLayout>
</LinearLayout>
