<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ForgetPassActivity">

    <include layout="@layout/base_toolbar" />

    <LinearLayout
        android:id="@+id/llt_fps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/acvw_fps_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:hint="@string/prompt_tel"
            android:inputType="number"
            android:maxLines="1"
            android:padding="20dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/acvw_fps_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/prompt_code"
            android:maxLines="1"
            android:padding="20dp"
            android:singleLine="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_fps_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape"
            android:text="@string/send_code" />

        <TextView
            android:id="@+id/tvw_fps_retunmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="end"
            android:text="@string/return_main"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>