<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="false"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity">

    <include layout="@layout/base_toolbar" />

    <TextView
        android:id="@+id/tv_register_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:textColor="#4b5cc4"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                style="@style/register_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/te_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/register_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/te_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/register_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/te_re_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/repass"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/register_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/te_idcard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/identity"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/register_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/te_tel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/number"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/ll_register_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <EditText
                        android:id="@+id/et_register_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:hint="@string/code"
                        android:inputType="number" />

                    <Button
                        android:id="@+id/bt_register_vail_code"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttonshape"
                        android:text="@string/check"
                        android:textColor="@color/black_overlay" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/bt_register_ok"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shape"
            android:text="@string/next" />


    </LinearLayout>


</LinearLayout>