<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:background="@drawable/bg_click"
    android:clickable="true"
    android:focusable="true"
    android:padding="20dp">

    <com.loopj.android.image.SmartImageView
        android:id="@+id/siv_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:contentDescription="@null"
        tools:src="@drawable/doctor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_doctor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:text="@string/definition" />

            <TextView
                android:id="@+id/tv_doctor_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/lv_shape"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="2dp"
                android:singleLine="true"
                android:text="@string/good_doctor"
                android:textColor="#EEDD1818"
                android:textSize="15sp"
                android:visibility="gone" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_doctor_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#99000000"
                android:textSize="14sp"
                tools:text="@string/rank" />

        </LinearLayout>
    </LinearLayout>


    <include
        layout="@layout/base_div_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="80dp" />


</android.support.design.widget.CoordinatorLayout>